<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Controle Financeiro</string>
    <string name="action_settings">Action Settings</string>
    
    <string name="accountsTitle">Contas e Saldos</string>
    <string name="accounts">Contas</string> 
    <string name="account">Conta</string>
    <string name="numberAccount">Nº Conta</string>
    <string name="addNewAccount">Cadastrar Conta</string>
    <string name="bankAccount">Conta Bancária</string>
    <string name="cipher">R$</string>
    <string name="confirm_title">Tem Certeza?</string>
    <string name="confirm_message">Esta operação vai excluir permanentemente o registro</string>
    <string name="balance">Saldo</string>
    <string name="balanceTotal">Saldo Total</string>
    <string name="button_delete">Excluir</string>
    <string name="editAccount">Editar Conta</string>
    <string name="hintNameAccount">Para identificar sua conta</string>
    <string name="hintBalanceAccount">Saldo atual da conta</string>
    <string name="hintOverdraftAccount">Valor Disponível</string>
    <string name="hintNameBankAccount">Instituição Financeira</string>
    <string name="hintNumberAccount">0000-0</string>
    <string name="nameOfAccount">Nome</string>
    <string name="nameOfBank">Banco</string>
    <string name="numberAgency">Agência</string>
    <string name="noAccountRecords">Não há contas cadastradas</string>
    <string name="ordinaryAccount">Conta Comum</string>
    <string name="overdraft">Especial</string>
    <string name="save">Gravar</string>
    <string name="selectAccountAddDel">Selecione a conta</string>
    <string name="selectAccount">Selecione o tipo de conta</string>
    <string name="selectOption">Selecione uma opção</string>
    <string name="update">Editar Dados</string>
   
    
    <string-array name="optionsAccountMenu">
        <item id="@+id/accountmenu_add">Adicionar Conta</item>
        <item name="accountmenu_edit">Editar Conta</item>
        <item name="accountmenu_delete">Excluir Conta</item>
    </string-array>
    
</resources>
