<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/formNewAccountTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/formElementsMargin" >

        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:textSize="@dimen/text_size" 
	        android:text="@string/nameOfAccount"/>
    
    	<EditText
	        android:id="@+id/nameAccountEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:imeOptions="actionNext"
	        android:inputType="text"
	        android:hint="@string/hintNameAccount" />
        
    </TableRow>
    
   <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/formElementsMargin" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/text_size" 
	        android:text="@string/balance" />
     
    	<EditText
	        android:id="@+id/balanceAccountEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hintBalanceAccount"
	        android:inputType="numberDecimal"
	        android:imeOptions="actionNext" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/formElementsMargin" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/text_size" 
	        android:text="@string/overdraft" />
     
    	<EditText
	        android:id="@+id/overdraftAccountEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hintOverdraftAccount"
	        android:inputType="numberDecimal"
	        android:imeOptions="actionNext" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/formElementsMargin" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/text_size" 
	        android:text="@string/nameOfBank" />
     
    	<EditText
	        android:id="@+id/nameBankAccountEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hintNameBankAccount"
	        android:inputType="text"
	        android:imeOptions="actionNext" />
        
    </TableRow>
    
       <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/formElementsMargin" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/text_size" 
	        android:text="@string/numberAgency" />
     
    	<EditText
	        android:id="@+id/numberAgencyAccountEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hintNumberAccount"
	        android:inputType="text"
	        android:imeOptions="actionNext" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/formElementsMargin" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/text_size" 
	        android:text="@string/numberAccount" />
     
    	<EditText
	        android:id="@+id/numberAccountEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hintNumberAccount"
	        android:inputType="text"
	        android:imeOptions="actionDone" />
        
    </TableRow>
    
</TableLayout>
