<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/formNewAccountTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/formElementsMargin" >

        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:textSize="@dimen/text_size" 
	        android:text="@string/nameOfAccount"/>
    
    	<EditText
	        android:id="@+id/nameAccountEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hintNameAccount"
	        android:inputType="text"
	        android:imeOptions="actionNext" />
        
    </TableRow>
    
   <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/formElementsMargin" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/text_size" 
	        android:text="@string/balance" />
     
    	<EditText
	        android:id="@+id/balanceAccountEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal"
	        android:hint="@string/hintBalanceAccount"
	        android:imeOptions="actionDone" />
        
    </TableRow>
    
</TableLayout>
